objects/EUR_CRM_GB_Product_Objective_Item__c.object
<CustomObject>
    <description>PREU GB Data Model</description>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipLabel>Product Objective Items</relationshipLabel>
        <relationshipName>Product_Objective_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Objective__c</fullName>
        <label>Objective</label>
        <referenceTo>EUR_CRM_GB_Objective__c</referenceTo>
        <relationshipLabel>Product Objective Items</relationshipLabel>
        <relationshipName>Product_Objective_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product Objective Item (EU)</label>
    <nameField>
        <displayFormat>POI-{00000000}</displayFormat>
        <label>Product Objective Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Objective Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_GB_Product_Objective_Item</fullName>
        <active>true</active>
        <label>GB Product Objective Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>